--- a/res/values/ras_arrays.xml
+++ b/res/values/ras_arrays.xml
@@ -242,4 +242,17 @@
         <item>ic_lockscreen_twitter_normal</item>
     </string-array>
 
+    <!-- Center Clock -->
+    <string-array name="entries_status_bar_clock_style" translatable="false">
+        <item>Hide</item>
+        <item>Right (default)</item>
+        <item>Center</item>
+    </string-array>
+
+    <string-array name="values_status_bar_clock_style" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
 </resources>
