Settings: Add support for variable size pattern lockscreen (Part 2/2)
Thanks CM

for the base.....ported to new keyguard, moved service and some
new API 19 stuff

--- a/res/values/ras_strings.xml
+++ b/res/values/ras_strings.xml
@@ -448,4 +448,10 @@
     <string name="peek_wake_10seconds">10 seconds</string>
     <string name="peek_wake_20seconds">20 seconds</string>
     <string name="peek_wake_30seconds">30 seconds</string>
+
+    <!-- Sizes for pattern lockscreen -->
+    <string name="lock_pattern_size_3">3x3</string>
+    <string name="lock_pattern_size_4">4x4</string>
+    <string name="lock_pattern_size_5">5x5</string>
+    <string name="lock_pattern_size_6">6x6</string>
 </resources>
