Add option for switching between UMS and MTP/PTP mode. (2/2)
This adds support for switching between UMS and MTP/PTP.
Settings part (this part) adds option in USB settings (statusbar/notification drawer) for enabling UMS,
and adds setting in Storage menu to enable / disable UMS, this since the USB settings page disappears when enabling UMS.

Forward port from cm-10.2, adjusted for 4.4

Change-Id: I6cf50a41a9a82e40e702f5231ce663636c149613

--- a/res/values/ras_strings.xml
+++ b/res/values/ras_strings.xml
@@ -263,4 +263,8 @@
     <string name="navring_choose_action_title">Choose action</string>
     <string name="navring_action_power_menu">Power menu</string>
     <string name="navring_action_screenrecord">Screen record</string>
+
+    <!-- USB Mass Storage -->
+    <string name="usb_mass_storage_title">Mass storage (UMS)</string>
+    <string name="usb_mass_storage_summary">Lets you transfer any files between your computer and your SD card by mounting it as a flash device</string>
     </resources>
