Switch to new Privacy Guard version (2/2)

--- a/res/layout/app_ops_details.xml
+++ b/res/layout/app_ops_details.xml
@@ -24,6 +24,8 @@
     android:paddingBottom="5dip"
     android:orientation="vertical"
     android:clipToPadding="false"
+    android:paddingBottom="5dip"
+    android:orientation="vertical"
     android:scrollbarStyle="@*android:integer/preference_fragment_scrollbarStyle">
 
     <!-- App snippet -->
