--- a/res/xml/system_settings.xml
+++ b/res/xml/system_settings.xml
@@ -12,6 +12,11 @@
         android:fragment="com.android.settings.rascarlo.StatusBarClockStyle"
         android:key="clock_style_pref"
         android:title="@string/status_bar_clock" />
+
+   <PreferenceScreen
+        android:fragment="com.android.settings.rascarlo.BatteryIconStyle"
+        android:key="battery_style_pref"
+        android:title="@string/battery_icon_title" />
     
    <PreferenceScreen
         android:key="navigation_bar"
