[1/2] Setting: Lockscreen maximized widgets
Settings part of maximizing lockscreen widgets

Modified from CM

--- a/res/xml/security_settings_biometric_weak.xml
+++ b/res/xml/security_settings_biometric_weak.xml
@@ -61,7 +61,14 @@
             android:summary="@string/lockscreen_enable_camera_summary"
             android:persistent="false"/>
 
-        <CheckBoxPreference
+	 <CheckBoxPreference
+            android:key="lockscreen_maximize_widgets"
+            android:title="@string/security_maximize_widgets_title"
+            android:persistent="false"
+            android:dependency="keyguard_enable_widgets"/>
+
+
+	<CheckBoxPreference
             android:key="lockscreen_enable_power_menu"
             android:title="@string/lockscreen_enable_power_menu_title"
             android:summary="@string/lockscreen_enable_power_menu_summary"
