[1/2] Setting: Lockscreen maximized widgets
Settings part of maximizing lockscreen widgets

Modified from CM

--- a/res/values/ras_strings.xml
+++ b/res/values/ras_strings.xml
@@ -338,4 +338,7 @@
     <!-- Lockscreen see through -->
     <string name="lockscreen_see_through_title">See through</string>
     <string name="lockscreen_see_through_summary">Shows the content behind your lockscreen, your data may be visible to those around you</string>
+
+    <!-- Lockscreen maximized widgets-->
+    <string name="security_maximize_widgets_title">Maximize lockscreen widgets</string>
 </resources>
