--- a/res/xml/security_settings_chooser.xml
+++ b/res/xml/security_settings_chooser.xml
@@ -36,6 +36,10 @@
             android:summary="@string/lockscreen_enable_camera_summary"
             android:persistent="false"/>
 
+        <CheckboxPreference
+            android:key="lockscreen_maximize_widgets"
+            android:title="@string/security_maximize_widgets_title"/>
+
         <CheckBoxPreference
             android:key="lockscreen_enable_power_menu"
             android:title="@string/lockscreen_enable_power_menu_title"
