[1/2] Setting: Lockscreen maximized widgets
      Enable lockscreen widgets to be expanded by default.
      Enable checkbox only if "Enable Widgets" is selected

--- a/res/xml/security_settings_pattern.xml
+++ b/res/xml/security_settings_pattern.xml
@@ -46,6 +46,11 @@
             android:key="keyguard_enable_widgets"
             android:title="@string/security_enable_widgets_title"/>
 
+        <CheckboxPreference
+            android:key="lockscreen_maximize_widgets"
+            android:title="@string/security_maximize_widgets_title"
+            android:enabled="false"/>
+
         <CheckBoxPreference
             android:key="lockscreen_enable_camera"
             android:title="@string/lockscreen_enable_camera_title"
