--- a/res/values/ras_strings.xml
+++ b/res/values/ras_strings.xml
@@ -262,4 +262,5 @@
     <string name="navring_action_google_now">Google Now</string>
     <string name="navring_choose_action_title">Choose action</string>
     <string name="navring_action_power_menu">Power menu</string>
+    <string name="navring_action_screenrecord">Screen record</string>
     </resources>
