Settings: Enable AppOps
Enables back the AppOps activity and add a warning dialog on system
core app. Adds a "Apps permission" section under Personal.

--- a/res/values/ras_strings.xml
+++ b/res/values/ras_strings.xml
@@ -267,4 +267,9 @@
     <!-- USB Mass Storage -->
     <string name="usb_mass_storage_title">Mass storage (UMS)</string>
     <string name="usb_mass_storage_summary">Lets you transfer any files between your computer and your SD card by mounting it as a flash device</string>
+
+    <!-- AppOps additions -->
+    <string name="appops_settings">Apps permissions</string>
+    <string name="appops_sysapp_beware">Beware!</string>
+    <string name="appops_sysapp_warning">"Changing permissions of core Android components might lead to undesired behavior. Change settings here at your own risk!</string>
     </resources>
