--- a/res/xml/security_settings_password.xml
+++ b/res/xml/security_settings_password.xml
@@ -49,6 +49,12 @@
             android:persistent="false"/>
 
         <CheckBoxPreference
+            android:key="lockscreen_maximize_widgets"
+            android:title="@string/security_maximize_widgets_title"
+            android:persistent="false"
+            android:dependency="keyguard_enable_widgets"/>
+
+        <CheckBoxPreference
             android:key="lockscreen_enable_power_menu"
             android:title="@string/lockscreen_enable_power_menu_title"
             android:summary="@string/lockscreen_enable_power_menu_summary"
