--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -34,7 +34,7 @@
     <color name="crypt_keeper_clock_am_pm">#ff9a9a9a</color>
 
     <color name="divider_color">#20ffffff</color>
-    <color name="title_color">@android:color/holo_blue_light</color>
+    <color name="title_color">@android:color/white</color>
     <color name="setup_divider_color_dark">#33ffffff</color>
     <color name="setup_divider_color_light">#33000000</color>
 
