--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -30,7 +30,7 @@
         <PreferenceScreen
                 android:key="screen_recorder"
                 android:title="@string/screen_recorder_title"
-                android:fragment="com.android.settings.chameleonos.ScreenRecorderSettings" />
+                android:fragment="com.android.settings.rascarlo.ScreenRecorderSettings" />
 
         <CheckBoxPreference
             android:key="accelerometer"
