--- a/res/xml/security_settings_biometric_weak.xml
+++ b/res/xml/security_settings_biometric_weak.xml
@@ -67,7 +67,6 @@
             android:persistent="false"
             android:dependency="keyguard_enable_widgets"/>
 
-
 	<CheckBoxPreference
             android:key="lockscreen_enable_power_menu"
             android:title="@string/lockscreen_enable_power_menu_title"
@@ -79,6 +78,11 @@
             android:title="@string/lockscreen_see_through_title"
             android:summary="@string/lockscreen_see_through_summary"
             android:persistent="false" />
+
+        <CheckBoxPreference
+            android:key="lockscreen_battery_status"
+            android:title="@string/lockscreen_battery_status_title"
+            android:summary="@string/lockscreen_battery_status_summary" />
 
         <PreferenceScreen
             android:fragment="com.android.settings.OwnerInfoSettings"
