--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -67,6 +67,20 @@
         android:icon="@drawable/ic_settings_system"
         android:fragment="com.android.settings.rascarlo.SystemSettings"
         android:title="@string/system_settings_title" />
+
+    <!-- Apps Permissions -->
+    <header
+        android:id="@+id/appops_settings"
+        android:icon="@drawable/ic_settings_applications"
+        android:fragment="com.android.settings.applications.AppOpsSummary"
+        android:title="@string/appops_settings" />
+
+    <!-- Privacy Guard -->
+    <header
+        android:fragment="com.android.settings.slim.privacyguard.PrivacyGuardManager"
+        android:icon="@drawable/ic_settings_privacy"
+        android:title="@string/privacy_guard_manager_title"
+        android:id="@+id/privacy_guard_manager" />
     <!-- BUILD TWEAKS END -->
 
     <!-- DEVICE -->
@@ -153,13 +167,6 @@
         android:icon="@drawable/ic_settings_security"
         android:title="@string/security_settings_title"
         android:id="@+id/security_settings" />
-
-    <!-- Privacy Guard -->
-    <header
-        android:fragment="com.android.settings.slim.privacyguard.PrivacyGuardManager"
-        android:icon="@drawable/ic_settings_privacy"
-        android:title="@string/privacy_guard_manager_title"
-        android:id="@+id/privacy_guard_manager" />
 
     <!-- Language -->
     <header
