--- a/res/values/ras_strings.xml
+++ b/res/values/ras_strings.xml
@@ -426,6 +426,7 @@
     <string name="lockscreen_battery_status_title">Battery status</string>
     <string name="lockscreen_battery_status_summary">Always show battery status on keyguard</string>
 
+
     <!-- Lockscreen background -->
     <string name="lockscreen_background">Background</string>
     <string name="lockscreen_background_style_title">Lockscreen background</string>
@@ -436,4 +437,16 @@
     <string name="opacity">Opacity</string>
     <string name="background_result_successful">Background changed</string>
     <string name="background_result_not_successful">Background not changed</string>
+
+    <!-- omni switch recents -->
+    <string name="omniswitch_category">OmniSwitch</string>
+    <string name="recents_use_omniswitch_title">Use for recents</string>
+    <string name="recents_use_omniswitch_summary">Use OmniSwitch instead of default recents view</string>
+    <string name="omniswitch_start_settings_title">Settings</string>
+    <string name="omniswitch_start_settings_summary">Open OmniSwitch settings</string>
+    <string name="omniswitch_not_installed_title">Warning</string>
+    <string name="omniswitch_not_installed_summary">OmniSwitch is not installed</string>
+    <string name="omniswitch_not_installed_message">OmniSwitch is not installed</string>
+    <string name="omniswitch_first_time_title">Information</string>	
+    <string name="omniswitch_first_time_message">Make sure you have enabled OmniSwitch. You can do this by using \"Settings\" below</string>
     </resources>
