--- a/res/xml/network_usage_stats.xml
+++ b/res/xml/network_usage_stats.xml
@@ -19,6 +19,12 @@ limitations under the License.
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
         android:title="@string/network_traffic_title">
 
+        <com.android.settings.rascarlo.SystemSettingCheckBoxPreference
+            android:key="status_bar_network_activity"
+            android:title="@string/show_activity_indicators_on_status_bar_title"
+            android:summary="@string/show_activity_indicators_on_status_bar_summary"
+            android:defaultValue="false" />
+
         <CheckBoxPreference
             android:key="status_bar_show_network_stats"
             android:title="@string/status_bar_show_network_stats_title"
