--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -18,18 +18,46 @@
             android:key="double_tap_sleep_gesture"
             android:title="@string/status_bar_double_tap_to_sleep_title" />
 
-        <PreferenceScreen
-            android:key="network_usage_stats"
-            android:fragment="com.android.settings.rascarlo.NetworkUsageStats"
-            android:title="@string/network_traffic_title"
-            android:summary="@string/network_traffic_summary" />
-
         <ListPreference
             android:dialogTitle="@string/status_bar_battery_title"
             android:entries="@array/entries_status_bar_battery"
             android:entryValues="@array/values_status_bar_battery"
             android:key="status_bar_battery"
             android:title="@string/status_bar_battery_title" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="status_bar_network_stats"
+        android:title="@string/network_traffic_title" >
+
+        <CheckBoxPreference
+            android:key="status_bar_show_network_stats"
+            android:title="@string/status_bar_show_network_stats_title"
+            android:summary="@string/status_bar_show_network_stats_summary"
+            android:defaultValue="false" />
+
+        <com.android.settings.rascarlo.SeekBarPreference
+            android:key="network_stats_update_frequency"
+            android:title="@string/status_bar_network_stats_update_title"
+            android:summary="@string/status_bar_network_stats_update_summary"
+            android:max="2500"
+            settings:interval="50"
+            settings:min="250"
+            settings:unitsLeft=""
+            settings:unitsRight="ms"
+            android:persistent="false" />
+
+        <CheckBoxPreference
+            android:key="status_bar_network_hide"
+            android:title="@string/hide_network_speed"
+            android:summary="@string/hide_network_speed_summary"
+            android:defaultValue="false" />
+
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="status_bar_network_color"
+            android:title="@string/status_bar_network_usage_color_style"
+            android:defaultValue="#ffffff" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
