Revert "Make Privacy Guard a first class citizen in the Settings app."
This reverts commit 11672a9bee8b4cb15a144d76c558e632653b14c8.

--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -154,12 +154,13 @@
         android:title="@string/security_settings_title"
         android:id="@+id/security_settings" />
 
-    <!-- Privacy Guard -->
+    <!-- Apps Permissions -->
     <header
-        android:fragment="com.android.settings.slim.privacyguard.PrivacyGuardManager"
-        android:icon="@drawable/ic_settings_privacy"
-        android:title="@string/privacy_guard_manager_title"
-        android:id="@+id/privacy_guard_manager" />
+        android:id="@+id/appops_settings"
+        android:icon="@drawable/ic_settings_applications"
+        android:fragment="com.android.settings.applications.AppOpsSummary"
+        android:title="@string/appops_settings" />
+
 
     <!-- Language -->
     <header
