--- a/res/layout/app_ops_details.xml
+++ b/res/layout/app_ops_details.xml
@@ -18,16 +18,13 @@
 -->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/all_details"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="5dip"
-    android:orientation="vertical"
     android:clipToPadding="false"
-    android:scrollbarStyle="@*android:integer/preference_fragment_scrollbarStyle">
+    android:scrollbarStyle="@integer/preference_scrollbar_style">
 
-    <!-- App snippet -->
     <LinearLayout
+        android:id="@+id/all_details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
