--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    android:title="@string/status_bar_title" 
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings" >
+    android:title="@string/status_bar_title" >
 
     <PreferenceCategory
         android:key="status_bar_general_category"
