--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -12,17 +12,38 @@
             android:summary="@string/status_bar_toggle_brightness_summary"
             android:title="@string/status_bar_toggle_brightness" />
 
-        <CheckBoxPreference
-            android:defaultValue="false"
-            android:key="double_tap_sleep_gesture"
-            android:title="@string/status_bar_double_tap_to_sleep_title" />
-
         <ListPreference
             android:dialogTitle="@string/status_bar_battery_title"
             android:entries="@array/entries_status_bar_battery"
             android:entryValues="@array/values_status_bar_battery"
             android:key="status_bar_battery"
             android:title="@string/status_bar_battery_title" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+            android:key="category_network_traffic"
+            android:title="@string/network_traffic_title">
+
+        <ListPreference
+                android:key="network_traffic_state"
+                android:title="@string/show_network_traffic_state"
+                android:entries="@array/show_network_traffic_state_entries"
+                android:entryValues="@array/show_network_traffic_state_values"
+                android:persistent="false" />
+
+        <ListPreference
+                android:key="network_traffic_unit"
+                android:title="@string/show_network_traffic_unit"
+                android:entries="@array/show_network_traffic_unit_entries"
+                android:entryValues="@array/show_network_traffic_unit_values"
+                android:persistent="false" />
+
+        <ListPreference
+                android:key="network_traffic_period"
+                android:title="@string/show_network_traffic_frequency"
+                android:entries="@array/show_network_traffic_frequency_entries"
+                android:entryValues="@array/show_network_traffic_frequency_values"
+                android:persistent="false" />
     </PreferenceCategory>
 
     <PreferenceCategory
