--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -20,7 +20,7 @@
             android:title="@string/status_bar_battery_title" />
     </PreferenceCategory>
 
-    <PreferenceCategory
+    <PreferenceScreen
             android:key="category_network_traffic"
             android:title="@string/network_traffic_title">
 
@@ -44,7 +44,7 @@
                 android:entries="@array/show_network_traffic_frequency_entries"
                 android:entryValues="@array/show_network_traffic_frequency_values"
                 android:persistent="false" />
-    </PreferenceCategory>
+    </PreferenceScreen>
 
     <PreferenceCategory
         android:key="status_bar_clock_category"
