Revert "Add Center Clock-Settings Part"
This reverts commit 771475556ee586bc22b102507bd46f863076a4ea.

Conflicts:
	res/values/ras_arrays.xml
	src/com/android/settings/rascarlo/StatusBarSettings.java

--- a/res/values/ras_strings.xml
+++ b/res/values/ras_strings.xml
@@ -66,7 +66,7 @@
     <string name="status_bar_battery_status_circle_percentage">Circle with percentage</string>
     <!-- Status bar clock -->
     <string name="status_bar_clock_title">Clock</string>
-    <string name="status_bar_clock_style_title">Clock Style</string>
+    <string name="status_bar_show_clock_title">Show clock</string>
     <string name="status_bar_am_pm_title">AM/PM style</string>
     <string name="status_bar_am_pm_info">24-hour clock must be disabled</string>
     <!-- Status bar quick settings -->
