PEEK [2/2] & add Lichti Tweaks
Add ability to switch peek on or off.

Signed-off-by: Carlo Savignano <stevewatersy@gmail.com>
Change-Id: I1943221aa867099aeed001f3ff54ab83def90391

Conflicts:
	src/com/android/settings/DisplaySettings.java

Conflicts:
	res/values-es/pa_strings.xml
	res/values/pa_strings.xml
	res/xml/display_settings.xml
	src/com/android/settings/DisplaySettings.java

--- a/res/xml/system_settings.xml
+++ b/res/xml/system_settings.xml
@@ -14,6 +14,11 @@
         android:title="@string/navigation_bar_title" />
 
    <PreferenceScreen
+        android:key="lichti_tweaks"
+        android:fragment="com.android.settings.rascarlo.LichtiTweaks"
+        android:title="@string/lichti_tweaks_title" />
+
+   <PreferenceScreen
         android:fragment="com.android.settings.rascarlo.VolumeRocker"
         android:key="volume_rocker_settings"
         android:title="@string/volume_rocker_category_title" />
