--- a/res/values/ras_strings.xml
+++ b/res/values/ras_strings.xml
@@ -37,6 +37,8 @@
     <!-- System Interface settings  -->
     <string name="system_settings_title">Build Tweaks</string>
     <string name="system_interface_title">Build Tweaks</string>
+    <!-- lichti tweaks -->
+    <string name="lichti_tweaks_title">Lichti Addons</string>
     
     <!-- Volume rocker behaviours -->
     <string name="volume_rocker_category_title">Volume rocker</string>
@@ -420,4 +422,11 @@
     <string name="status_bar_style_text">Text</string>
     <string name="status_bar_style_hidden">Hidden</string>
     <string name="status_bar_battery_show_percent_title">Show battery status percent</string>
+
+    <!--Notification category-->
+    <string name="notification_category">Notifications</string>
+
+    <!--Notification peek-->
+    <string name="notification_peek_title">Notification peek</string>
+    <string name="notification_peek_summary">Show latest notification after picking up your device</string>
 </resources>
