--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -1,5 +1,6 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/status_bar_title" >
 
     <PreferenceCategory
@@ -45,17 +46,6 @@
                 android:entryValues="@array/show_network_traffic_frequency_values"
                 android:persistent="false" />
     </PreferenceScreen>
-
-    <PreferenceCategory
-        android:key="status_bar_clock_category"
-        android:title="@string/status_bar_style_title">
-
-        <PreferenceScreen
-            android:fragment="com.android.settings.rascarlo.StatusBarClockStyle"
-            android:key="clock_style_pref"
-            android:title="@string/status_bar_clock" />
-
-    </PreferenceCategory>
 
     <PreferenceCategory
         android:key="status_bar_quick_settings_category"
