--- a/res/values/ras_strings.xml
+++ b/res/values/ras_strings.xml
@@ -449,4 +449,10 @@
     <string name="omniswitch_not_installed_message">OmniSwitch is not installed</string>
     <string name="omniswitch_first_time_title">Information</string>	
     <string name="omniswitch_first_time_message">Make sure you have enabled OmniSwitch. You can do this by using \"Settings\" below</string>
+
+    <string name="category_app_circle_bar_title">App launcher</string>
+    <string name="app_circle_bar_title">App circle bar</string>
+    <string name="app_circle_bar_summary">Show circle app launcher after touching right side of screen</string>
+    <string name="app_circle_bar_included_apps_title">Included apps</string>
+    <string name="app_circle_bar_included_apps_summary">Apps will show in app circle bar</string>
     </resources>
