--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -13,12 +13,6 @@
             android:summary="@string/status_bar_toggle_brightness_summary"
             android:title="@string/status_bar_toggle_brightness" />
 
-        <ListPreference
-            android:dialogTitle="@string/status_bar_battery_title"
-            android:entries="@array/entries_status_bar_battery"
-            android:entryValues="@array/values_status_bar_battery"
-            android:key="status_bar_battery"
-            android:title="@string/status_bar_battery_title" />
     </PreferenceCategory>
 
     <PreferenceScreen
@@ -52,11 +46,10 @@
         android:title="@string/status_bar_quick_settings_category">
 
         <ListPreference
+            android:key="quick_pulldown"
+            android:title="@string/quick_pulldown_title"
             android:entries="@array/quick_pulldown_entries"
             android:entryValues="@array/quick_pulldown_values"
-            android:key="quick_pulldown"
-            android:persistent="false"
-            android:title="@string/quick_pulldown_title" />
-    </PreferenceCategory>
+            android:persistent="false" />
 
 </PreferenceScreen>
