--- a/res/xml/security_settings_biometric_weak.xml
+++ b/res/xml/security_settings_biometric_weak.xml
@@ -74,6 +74,12 @@
             android:persistent="false" />
 
         <CheckBoxPreference
+            android:key="lockscreen_see_through"
+            android:title="@string/lockscreen_see_through_title"
+            android:summary="@string/lockscreen_see_through_summary"
+            android:persistent="false" />
+
+        <CheckBoxPreference
             android:key="lockscreen_battery_status"
             android:title="@string/lockscreen_battery_status_title"
             android:summary="@string/lockscreen_battery_status_summary" />
