--- a/res/values/ras_strings.xml
+++ b/res/values/ras_strings.xml
@@ -94,32 +94,13 @@
     <string name="reset">Reset</string>
     <string name="ok">OK</string>
 
-    <!-- StatusBar Battery Settings -->
-    <string name="battery_icon_title">Battery icon</string>
-    <string name="battery_status_icon">Icon</string>
-    <string name="battery_status_percentage">Percentage</string>
-    <string name="battery_status_icon_percentage">Icon with percentage</string>
-    <string name="battery_status_circle">Circle</string>
-    <string name="battery_status_circle_percentage">Circle with percentage</string>
-    <string name="battery_status_dotted_circle_percentage">Dotted Circle with percentage</string>
-    <string name="battery_status_dotted_circle">Dotted Circle</string>
-    <string name="battery_color_title">Battery color</string>
-    <string name="circle_battery_animation_speed">Circle animation speed</string>
-    <string name="circle_battery_animation_speed_none">None</string>
-    <string name="circle_battery_animation_speed_slow">Slow</string>
-    <string name="circle_battery_animation_speed_stock">Normal</string>
-    <string name="circle_battery_animation_speed_fast">Fast</string>
-    <string name="battery_text_color">Percentage text color</string>
-    <string name="battery_bolt_color">Bolt charging color</string>
-    <string name="battery_text_charging_color">Percentage text charging color</string>
-    <string name="battery_style_reset_message">Reset all battery colors?</string>
-
-    <!-- Hide battery icon -->
-    <string name="hide_battery_icon_title">Hide battery icon</string>
-    <string name="hide_battery_icon_summary">Hides the battery icon in the status bar</string>
-
+    <!-- Status bar clock -->
+    <string name="status_bar_clock_title">Clock</string>
+    <string name="status_bar_show_clock_title">Show clock</string>
+    <string name="status_bar_am_pm_title">AM/PM style</string>
+    <string name="status_bar_am_pm_info">24-hour clock must be disabled</string>
+    <!-- Status bar quick settings -->
     <!-- Quick settings -->
-    <string name="status_bar_quick_settings_category">Quick settings</string>
     <string name="quick_pulldown_title">Quick Settings pulldown</string>
     <string name="quick_pulldown_off">Off</string>
     <string name="quick_pulldown_left">Left</string>
@@ -432,4 +413,15 @@
     <!-- Keyguard always show battery -->
     <string name="lockscreen_battery_status_title">Battery status</string>
     <string name="lockscreen_battery_status_summary">Always show battery status on keyguard</string>
-    </resources>
+
+    <!-- StatusBar Battery Settings -->
+    <string name="battery_icon_title">Battery icon</string>
+    <string name="battery_icon_summary">View or change the battery style settings</string>
+    <string name="status_bar_battery_title">Battery status style</string>
+    <string name="status_bar_style_icon_portrait">Icon portrait</string>
+    <string name="status_bar_style_icon_landscape">Icon landscape</string>
+    <string name="status_bar_style_circle">Circle</string>
+    <string name="status_bar_style_text">Text</string>
+    <string name="status_bar_style_hidden">Hidden</string>
+    <string name="status_bar_battery_show_percent_title">Show battery status percent</string>
+</resources>
