--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -3,15 +3,35 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/status_bar_title" >
 
-    <PreferenceCategory
-        android:key="status_bar_general_category"
-        android:title="@string/general_string" >
+    <PreferenceScreen
+            android:key="battery_icon"
+            android:title="@string/battery_icon_title"
+            android:icon="@drawable/ic_settings_battery"
+            android:summary="@string/battery_icon_summary">
+
+        <ListPreference
+                android:key="status_bar_battery"
+                android:dialogTitle="@string/status_bar_battery_title"
+                android:title="@string/status_bar_battery_title"
+                android:entries="@array/entries_status_bar_battery"
+                android:entryValues="@array/values_status_bar_battery"
+                android:defaultValue="0" />
 
         <CheckBoxPreference
-            android:defaultValue="false"
-            android:key="status_bar_brightness_control"
-            android:summary="@string/status_bar_toggle_brightness_summary"
-            android:title="@string/status_bar_toggle_brightness" />
+                android:key="status_bar_battery_show_percent"
+                android:title="@string/status_bar_battery_show_percent_title"
+                android:defaultValue="false" />
+    </PreferenceScreen>
+
+    <PreferenceCategory
+            android:key="status_bar_general_category"
+            android:title="@string/general_string" >
+
+        <CheckBoxPreference
+                android:defaultValue="false"
+                android:key="status_bar_brightness_control"
+                android:summary="@string/status_bar_toggle_brightness_summary"
+                android:title="@string/status_bar_toggle_brightness" />
 
     </PreferenceCategory>
 
@@ -42,15 +62,15 @@
     </PreferenceScreen>
 
     <PreferenceCategory
-        android:key="status_bar_quick_settings_category"
-        android:title="@string/status_bar_quick_settings_category">
+            android:key="status_bar_quick_settings_category"
+            android:title="@string/status_bar_quick_settings_category">
 
         <ListPreference
-            android:key="quick_pulldown"
-            android:title="@string/quick_pulldown_title"
-            android:entries="@array/quick_pulldown_entries"
-            android:entryValues="@array/quick_pulldown_values"
-            android:persistent="false" />
+                android:key="quick_pulldown"
+                android:title="@string/quick_pulldown_title"
+                android:entries="@array/quick_pulldown_entries"
+                android:entryValues="@array/quick_pulldown_values"
+                android:persistent="false" />
     </PreferenceCategory>
 
 </PreferenceScreen>
