--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -4,6 +4,11 @@
     android:title="@string/status_bar_title" >
 
     <PreferenceScreen
+            android:fragment="com.android.settings.rascarlo.StatusBarClockStyle"
+            android:key="clock_style_pref"
+            android:title="@string/status_bar_clock" />
+
+    <PreferenceScreen
             android:key="battery_icon"
             android:title="@string/battery_icon_title"
             android:icon="@drawable/ic_settings_battery"
