--- a/res/values/ras_arrays.xml
+++ b/res/values/ras_arrays.xml
@@ -310,7 +310,7 @@
         <item>2</item>
     </string-array>
 
-<!-- Status bar battery -->
+    <!-- Status bar battery -->
     <string-array name="entries_status_bar_battery" translatable="false">
         <item>@string/status_bar_style_icon_portrait</item>
         <item>@string/status_bar_style_icon_landscape</item>
@@ -325,5 +325,22 @@
         <item>2</item>
 	<item>6</item>
         <item>4</item>
+    </string-array>
+
+    <!-- Peek pickup timeout -->
+    <string-array name="peek_pickup_timeout_values" translatable="false">
+        <item>10000</item>
+        <item>30000</item>
+        <item>45000</item>
+        <item>60000</item>
+        <item>120000</item>
+    </string-array>
+
+    <string-array name="peek_pickup_timeout_entries" translatable="false">
+        <item>@string/peek_pickup_10seconds</item>
+        <item>@string/peek_pickup_30seconds</item>
+        <item>@string/peek_pickup_45seconds</item>
+        <item>@string/peek_pickup_60seconds</item>
+        <item>@string/peek_pickup_120seconds</item>
     </string-array>
 </resources>
