--- a/res/xml/lichti_tweaks.xml
+++ b/res/xml/lichti_tweaks.xml
@@ -28,4 +28,22 @@
             android:dependency="notification_peek" />
     </PreferenceCategory>
 
+    <!-- Appops and Privacy Guard -->
+    <PreferenceCategory
+        android:key="ras_security_category"
+        android:title="@string/ras_security_category">
+
+        <PreferenceScreen
+            android:id="@+id/appops_settings"
+            android:icon="@drawable/ic_settings_applications"
+            android:fragment="com.android.settings.applications.AppOpsSummary"
+            android:title="@string/appops_settings" />
+
+        <PreferenceScreen
+            android:fragment="com.android.settings.slim.privacyguard.PrivacyGuardManager"
+            android:icon="@drawable/ic_settings_privacy"
+            android:title="@string/privacy_guard_manager_title"
+            android:id="@+id/privacy_guard_manager" />
+    </PreferenceCategory>
+
 </PreferenceScreen>
