Rework lockscreen see through and ann lockscreen blur

--- a/res/xml/lichti_tweaks.xml
+++ b/res/xml/lichti_tweaks.xml
@@ -65,6 +65,17 @@
                             android:title="@string/lockscreen_see_through_title"
                             android:summary="@string/lockscreen_see_through_summary"
                             android:persistent="false" />
+
+                    <com.android.settings.rascarlo.SeekBarPreference
+                            android:key="lockscreen_blur_radius"
+                            android:title="@string/blur_radius_title"
+                            android:summary="@string/blur_radius_summary"
+                            android:max="25"
+                            settings:min="0"
+                            settings:unitsLeft=""
+                            settings:unitsRight=""
+                            android:dependency="lockscreen_see_through"
+                            android:persistent="false" />
             </PreferenceScreen>
     </PreferenceCategory>
 
