--- a/res/values/ras_strings.xml
+++ b/res/values/ras_strings.xml
@@ -336,6 +336,9 @@
     <!-- Lockscreen see through -->
     <string name="lockscreen_see_through_title">See through</string>
     <string name="lockscreen_see_through_summary">Shows the content behind your lockscreen, your data may be visible to those around you</string>
+    <!-- Lockscreen blur -->
+    <string name="blur_radius_title">Blur content</string>
+    <string name="blur_radius_summary">Intensity for the blur effect</string>
 
     <!-- Double-tap to sleep -->
     <string name="double_tap_sleep_title">Double-tap to sleep</string>
